--- a/README
+++ b/README
@@ -627,7 +627,7 @@ The following options need to be configured:
 		initialised to a buffer of size CONFIG_PRE_CON_BUF_SZ
 		bytes located at CONFIG_PRE_CON_BUF_ADDR. The buffer is
 		a circular buffer, so if more than CONFIG_PRE_CON_BUF_SZ
-		bytes are output before the console is	initialised, the
+		bytes are output before the console is initialised, the
 		earlier bytes are discarded.
 
 		'Sane' compilers will generate smaller code if
@@ -2264,9 +2264,9 @@ FIT uImage format:
 - Standalone program support:
 		CONFIG_STANDALONE_LOAD_ADDR
 
-		This option allows to define board specific values
-		for the address where standalone program gets loaded,
-		thus overwriting the architecutre dependent default
+		This option defines a board specific value for the
+		address where standalone program gets loaded, thus
+		overwriting the architecture dependent default
 		settings.
 
 - Frame Buffer Address:
@@ -2276,12 +2276,9 @@ FIT uImage format:
 		address for frame buffer.
 		Then system will reserve the frame buffer address to
 		defined address instead of lcd_setmem (this function
-		grab the memory for frame buffer by panel's size).
+		grabs the memory for frame buffer by panel's size).
 
 		Please see board_init_f function.
-
-		If you want this config option then,
-		please define it at your board config file
 
 - Automatic software updates via TFTP server
 		CONFIG_UPDATE_TFTP
