FAT: Add FAT write feature
In some cases, saving data in RAM as a file with FAT format is required.
This patch allows the file to be written in FAT formatted partition.

The usage is similar with reading a file.
First, fat_register_device function is called before file_fat_write function
in order to set target partition.
Then, file_fat_write function is invoked with desired file name,
start ram address for writing data, and file size.

Signed-off-by: Donggeun Kim <dg77.kim@samsung.com>
Signed-off-by: Kyungmin Park <kyungmin.park@samsung.com>

--- a/README
+++ b/README
@@ -1175,6 +1175,11 @@ The following options need to be configured:
 		to disable the command chpart. This is the default when you
 		have not defined a custom partition
 
+- FAT(File Allocation Table) filesystem write function support:
+		CONFIG_FAT_WRITE
+		Support for saving memory data as a file
+		in FAT formatted partition
+
 - Keyboard Support:
 		CONFIG_ISA_KEYBOARD
 
